# serde-string-enum

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
scripts/: test-all.sh
src/: lib.rs  parse.rs
tests/: test.rs
tests/ui/: empty_enum.rs  empty_enum.stderr  missing_string_attr.rs  missing_string_attr.stderr  non_enum.rs  non_enum.stderr  non_string_alias.rs  non_string_alias.stderr  non_string_literal.rs  non_string_literal.stderr  non_unit_variant.stderr
