[package]
name = "serde_string_enum"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for serde serialization and deserialization of string-encoded enums."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
categories = ["encoding", "no-std"]
keywords = ["serde", "serialization", "string", "enum"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/serde-string-enum"
documentation = "https://docs.rs/serde_string_enum"
readme = "README.md"
exclude = [
    ".vscode",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0"
syn = "2.0"
unicase = "2.6.0"

[dev-dependencies]
lazy_static = "1.4"
serde_json = "1.0"
trybuild = "1.0"
