[package]
name = "serde_string_enum"
version = "0.2.0"
edition = "2021"
description = "Procedural macros for serde serialization and deserialization of string-encoded enums."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
categories = ["encoding", "no-std"]
keywords = ["serde", "serialization", "string", "enum"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/serde-string-enum"
documentation = "https://docs.rs/serde_string_enum"
readme = "README.md"
exclude = [
    ".vscode",
]

[lib]
proc-macro = true

[features]
default = ["std", "unicase"]

# Depend on the entire Rust standard library.
std = []

# Provide integration for heap-allocated collections without depending on the rest of the Rust standard library.
alloc = ["serde/alloc"]

# Use the unicase crate to provide Unicode-insensitive matching.
unicase = ["dep:unicase"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", default-features = false }
syn = "2.0"
unicase = { version = "2.6", optional = true }

[dev-dependencies]
cargo-all-features = "1.10"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
trybuild = "1.0"
